--- a/views/auth/2fa_login.twig
+++ b/views/auth/2fa_login.twig
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="fv-row mb-10">
 {#                                    <label for="twofa" class="form-label fs-6 fw-bolder text-dark">Two-factor authentication Code</label>#}
-                                    <input class="form-control form-control-lg form-control-solid" type="text" id="twofa" name="twofa" autocomplete="off" />
+                                    <input class="form-control form-control-lg form-control-solid" type="text" id="twofa" name="twofa"  />
                                 </div>
 
                                 <div class="text-center">
