--- a/views/user/profile/security.twig
+++ b/views/user/profile/security.twig
@@ -46,7 +46,7 @@
         <!--begin::Post-->
         <div class="post d-flex flex-column-fluid" id="kt_post">
             <!--begin::Container-->
-            <div id="kt_content_container" class="container-xxl">
+            <div id="kt_content_container" class="container-fluid">
                 <!--begin::Navbar-->
                 <div class="card mb-5 mb-xl-10">
                     <div class="card-body pt-9 pb-0">
