--- a/views/admin/includes/footer.twig
+++ b/views/admin/includes/footer.twig
@@ -1,42 +1,59 @@
+<div class="footer py-4 d-flex flex-lg-column" id="kt_footer">
+    <!--begin::Container-->
+    <div class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
+        <!--begin::Copyright-->
+        <div class="text-dark order-2 order-md-1">
+            Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.
+        </div>
+        <!--end::Copyright-->
+        <!--begin::Menu-->
+        <ul class="menu menu-gray-600 menu-hover-primary fw-bold order-1">
+            <li class="menu-item">
+                <a href="/about" target="_blank" class="menu-link px-2">About</a>
+            </li>
+            <li class="menu-item">
+                <a href="/support" target="_blank" class="menu-link px-2">Support</a>
+            </li>
+
+        </ul>
+        <!--end::Menu-->
+    </div>
+    <!--end::Container-->
+</div>
 
 </div>
-<!-- END MAIN CONTAINER -->
 
-<!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{{ env.APP_URL }}assets/dashboard/src/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/mousetrap/mousetrap.min.js"></script>
-<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/waves/waves.min.js"></script>
+</div>
+
+</div>
+<div id="kt_scrolltop" class="scrolltop" data-kt-scrolltop="true">
+    <!--begin::Svg Icon | path: icons/duotune/arrows/arr066.svg-->
+    <span class="svg-icon">
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+					<rect opacity="0.5" x="13" y="6" width="13" height="2" rx="1" transform="rotate(90 13 6)" fill="currentColor" />
+					<path d="M12.5657 8.56569L16.75 12.75C17.1642 13.1642 17.8358 13.1642 18.25 12.75C18.6642 12.3358 18.6642 11.6642 18.25 11.25L12.7071 5.70711C12.3166 5.31658 11.6834 5.31658 11.2929 5.70711L5.75 11.25C5.33579 11.6642 5.33579 12.3358 5.75 12.75C6.16421 13.1642 6.83579 13.1642 7.25 12.75L11.4343 8.56569C11.7467 8.25327 12.2533 8.25327 12.5657 8.56569Z" fill="currentColor" />
+				</svg>
+			</span>
+    <!--end::Svg Icon-->
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!-- END GLOBAL MANDATORY SCRIPTS -->
 
-<!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
-{% if route == '/admin/dashboard' %}
-    <script src="{{ env.APP_URL }}assets/dashboard/layouts/app.js"></script>
-<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/apex/apexcharts.min.js"></script>
-<script src="{{ env.APP_URL }}assets/dashboard/src/assets/js/dashboard/dash_2.js"></script>
-<!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
-{% endif %}
-<script src="{{ env.APP_URL }}assets/dashboard/src/assets/js/custom.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/plugins/global/plugins.bundle.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/js/scripts.bundle.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/table/datatable/datatables.js"></script>
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/fullcalendar.min.js"></script>
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/uuid/uuid4.min.js"></script>
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/custom-fullcalendar.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/user-management/users/list/table.js"></script>
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js" integrity="sha512-u3fPA7V8qQmhBPNT5quvaXVa1mnnLSXUep5PS1qo5NRzHwG19aHmNJnj1Q8hpA/nBWZtZD4r4AX6YOt5ynLN2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-
-
-{% if route == '/admin/users' %}
-
-
-<script>
-
-</script>
-{% endif %}
-
-
-
+<script src="{{ env.APP_URL }}assets/dash/assets/js/widgets.bundle.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/widgets.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/chat/chat.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/upgrade-plan.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/create-app.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/users-search.js"></script>
 
 
 
