--- a/views/admin/master.twig
+++ b/views/admin/master.twig
@@ -1,27 +1,34 @@
-<!doctype html>
-<html lang="en" data-footer="true">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/x-icon" href="{{ env.APP_URL }}assets/img/favicon.webp"/>
+    <base href="">
     <title>{{ seo.title }}</title>
-    <meta name="description" content="" />
+    <meta charset="utf-8" />
+    <meta name="description" content="The most advanced Bootstrap Admin Theme on Themeforest trusted by 94,000 beginners and professionals. Multi-demo, Dark Mode, RTL support and complete React, Angular, Vue &amp; Laravel versions. Grab your copy now and get life-time updates for free." />
+    <meta name="keywords" content="Metronic, bootstrap, bootstrap 5, Angular, VueJs, React, Laravel, admin themes, web design, figma, web development, free templates, free admin themes, bootstrap theme, bootstrap template, bootstrap dashboard, bootstrap dak mode, bootstrap button, bootstrap datepicker, bootstrap timepicker, fullcalendar, datatables, flaticon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Metronic - Bootstrap 5 HTML, VueJS, React, Angular &amp; Laravel Admin Dashboard Theme" />
+    <meta property="og:url" content="https://keenthemes.com/metronic" />
+    <meta property="og:site_name" content="Keenthemes | Metronic" />
+    <link rel="canonical" href="https://preview.keenthemes.com/metronic8" />
+
+    <link rel="icon" type="image/webp" href="{{ env.APP_URL }}assets/img/favicon.webp"/>
     {{ include('admin/includes/styles.twig') }}
 </head>
-<body class=" layout-boxed">
-    {{ include('admin/includes/navbar.twig') }}
-    <!--  BEGIN MAIN CONTAINER  -->
-    <div class="main-container " id="container">
-        <div class="overlay"></div>
-        <div class="search-overlay"></div>
-    {{ include('admin/includes/sidebar.twig') }}
+<!--end::Head-->
+<!--begin::Body-->
+<body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed aside-enabled aside-fixed" style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">
+<!--begin::Main-->
+<!--begin::Root-->
+<div class="d-flex flex-column flex-root">
+    <!--begin::Page-->
+    <div class="page d-flex flex-row flex-column-fluid">
+        {{ include('admin/includes/sidebar.twig') }}
 
-{% block content %} {% endblock %}
+        <div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper">
+            {{ include('admin/includes/navbar.twig') }}
+            {% block content %} {% endblock %}
 
-{{ include('admin/includes/footer.twig') }}
-    <script>
-        setTimeout(function() {
-            $("#loader").css({"display":"none"});
-        }, 100);
-    </script>
+            {{ include('admin/includes/footer.twig') }}
