--- a/views/admin/users/add_user.twig
+++ b/views/admin/users/add_user.twig
@@ -1,20 +1,26 @@
 {% extends 'admin/master.twig' %}
 {% block content %}
-    <div id="content" class="main-content">
-        <div class="layout-px-spacing">
+    <!--begin::Content-->
+    <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Toolbar-->
+        <div class="toolbar" id="kt_toolbar">
+            <!--begin::Container-->
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <!--begin::Page title-->
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <!--begin::Title-->
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Add Firm</h1>
 
-            <div class="middle-content container-xxl p-0">
-
-                <!-- BREADCRUMB -->
-                <div class="page-meta">
-                    <nav class="breadcrumb-style-one" aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            {#                <li class="breadcrumb-item"><a href="#">Users</a></li>#}
-                            <li class="breadcrumb-item active" aria-current="page">Add Firm</li>
-                        </ol>
-                    </nav>
                 </div>
-                <!-- /BREADCRUMB -->
+
+            </div>
+            <!--end::Container-->
+        </div>
+        <!--end::Toolbar-->
+        <!--begin::Post-->
+        <div class="post d-flex flex-column-fluid" id="kt_post">
+            <!--begin::Container-->
+            <div id="kt_content_container" class="container-fluid">
 
                 <div class="account-settings-container layout-top-spacing">
                     <div class="content-body">
@@ -24,42 +30,51 @@
 
                                 <div class="col-xl-12 col-lg-12">
                                     <div id="ErrorMessage"></div>
-                                    <div class="card  card-bx m-b30">
-                                        <div class="card-header">
-                                            <h6 class="title">Add Firm</h6>
+                                    <div class="card">
+
+                                        <div class="row" style="    padding: 2rem 2.25rem;">
+                                            <div class="col-sm-12">
+                                                <h6 class="title">Add Firm</h6>
+                                            </div>
                                         </div>
+                                        <div class="separator separator-dashed mb-10"></div>
                                         <form method="post" id="uploadForm" class="profile-form">
                                             <div class="card-body">
                                                 <div class="row">
+                                                    <div class="col-sm-12 m-b30">
+                                                        <label class="form-label">Business Structure</label>
+                                                        <input type="text" class="form-control form-control-solid" id="account_type" placeholder="Business Structure">
+                                                    </div>
                                                     <div class="col-sm-6 m-b30">
                                                         <label class="form-label">First name</label>
-                                                        <input type="text" class="form-control" id="fname" placeholder="First Name">
+                                                        <input type="text" class="form-control form-control-solid " id="fname" placeholder="First Name">
                                                         <input type="hidden" name="csrf" value="{{ csrf}}">
                                                     </div>
                                                     <div class="col-sm-6 m-b30">
                                                         <label class="form-label">Last name</label>
-                                                        <input type="text" class="form-control" id="lname" placeholder="Last Name">
+                                                        <input type="text" class="form-control form-control-solid" id="lname" placeholder="Last Name">
                                                     </div>
                                                     <div class="col-sm-6 m-b30">
                                                         <label class="form-label">Email adress</label>
-                                                        <input type="text" class="form-control" id="email" placeholder="Email">
+                                                        <input type="text" class="form-control form-control-solid" id="email" placeholder="Email">
                                                     </div>
                                                     <div class="col-sm-6 m-b30">
                                                         <label class="form-label">Phone No</label>
-                                                        <input type="tel" class="form-control" id="phone" placeholder="Phone No">
+                                                        <input type="tel" class="form-control form-control-solid" id="phone" placeholder="Phone No">
                                                     </div>
+
                                                     <div class="col-sm-6 m-b30">
                                                         <label class="form-label">Password</label>
-                                                        <input type="password" class="form-control" id="password" placeholder="Password">
+                                                        <input type="password" class="form-control form-control-solid" id="password" placeholder="Password">
                                                     </div>
                                                     <div class="col-sm-6 m-b30">
                                                         <label class="form-label">Confirm Password</label>
-                                                        <input type="password" class="form-control" id="cpassword" placeholder="Confirm Password">
+                                                        <input type="password" class="form-control form-control-solid" id="cpassword" placeholder="Confirm Password">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="card-footer">
-                                                <button type="button" class="btn btn-secondary" id="btn" onclick="add_user()">ADD</button>
+                                                <button type="button" class="btn btn-primary" id="btn" onclick="add_user()">ADD</button>
                                             </div>
                                         </form>
                                     </div>
@@ -70,17 +85,8 @@
                     </div>
                 </div>
 
-            </div>   </div>
-
-        <!--  BEGIN FOOTER  -->
-        <div class="footer-wrapper">
-            <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.</p>
-                </div>
             </div>
         </div>
-        <!--  END FOOTER  -->
     </div>
     <script>
         function add_user() {
@@ -88,11 +94,12 @@
             var lname = $("#lname").val();
             var phone = $("#phone").val();
             var email = $("#email").val();
+            var account_type = $("#account_type").val();
             var password = $("#password").val();
             var cpassword = $("#cpassword").val();
             var csrf_token = $("input[name=csrf]").val();
 
-            if (fname != "" && lname != "" && email != "" && password != "" && cpassword != "") {
+            if (fname != "" && lname != "" && email != ""&& account_type != "" && password != "" && cpassword != "") {
                 if (password == cpassword) {
                 document.getElementById("btn").innerHTML = "Loading";
                 $("#btn").attr("disabled");
@@ -105,6 +112,7 @@
                         fname: fname,
                         lname: lname,
                         phone: phone,
+                        account_type: account_type,
                         email: email,
                         password: password,
                         csrf: csrf_token,
