--- a/views/admin/users/firms.twig
+++ b/views/admin/users/firms.twig
@@ -1,33 +1,55 @@
 {% extends 'admin/master.twig' %}
 {% block content %}
 
+
     <!--  BEGIN CONTENT AREA  -->
-    <div id="content" class="main-content">
-        <div class="layout-px-spacing">
+    <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Toolbar-->
+        <div class="toolbar" id="kt_toolbar">
+            <!--begin::Container-->
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <!--begin::Page title-->
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <!--begin::Title-->
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Firm List</h1>
 
-            <div class="middle-content container-xxl p-0">
+                </div>
 
-                <!-- BREADCRUMB -->
-                <div class="page-meta">
-                    <nav class="breadcrumb-style-one" aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Firms</li>
-                        </ol>
-                    </nav>
-                </div>
-                <!-- /BREADCRUMB -->
-                <div class="row layout-spacing mt-2">
-                    <div class="col-lg-12 justify-content-end text-end ">
-                        <a class="btn btn-primary  me-4" href="/admin/add_user">
-                            <span class="btn-text-inner">Add</span>
-                        </a>
-                    </div>
-                </div>
+            </div>
+            <!--end::Container-->
+        </div>
+        <!--end::Toolbar-->
+        <!--begin::Post-->
+        <div class="post d-flex flex-column-fluid" id="kt_post">
+            <!--begin::Container-->
+            <div id="kt_content_container" class="container-fluid">
                 <div class="row layout-spacing">
                     <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
-                        <div class="widget-content widget-content-area br-8">
-                            <div class="widget-content widget-content-area">
+                            <div class="widget-content widget-content-area card">
+                                <div class="card-header border-0 pt-6">
+                                    <!--begin::Card title-->
+                                    <div class="col-md-6 text-start">
+                                        <!--begin::Search-->
+                                        <div class="d-flex align-items-center position-relative my-1">
+                                            <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
+                                            <span class="svg-icon svg-icon-1 position-absolute ms-6">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+														<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
+														<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="currentColor" />
+													</svg>
+												</span>
+                                            <!--end::Svg Icon-->
+                                            <input type="text" data-kt-customer-table-filter="search" id="search" class="form-control form-control-solid form-control form-control-solid-solid w-250px ps-15" placeholder="Search " />
+                                        </div>
+                                        <!--end::Search-->
+                                    </div>
+
+                                        <div class="col-md-6 text-end">
+                                            <a class="btn btn-primary  me-4" href="/admin/add_user">
+                                                <span class="btn-text-inner">Add</span>
+                                            </a>
+                                        </div>
+                                </div>
                             <div class="table-responsive">
                                 <table id="table"  class="table dt-table-hover" style="width:100%">
                                     <thead>
@@ -44,7 +66,6 @@
                                 </table>
                             </div>
                             </div>
-                        </div>
                     </div>
                 </div>
 
@@ -52,57 +73,54 @@
 
         </div>
 
-        <!--  BEGIN FOOTER  -->
-        <div class="footer-wrapper">
-            <div class="footer-section f-section-1">
-                <p class="">Copyright © <span class="dynamic-year">2022</span> <a target="_blank" href="https://zotecsoft.com">Zotec Soft</a>, All rights reserved.</p>
-            </div>
-            <div class="footer-section f-section-2">
-                <p class="">Coded with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg></p>
-            </div>
-        </div>
-        <!--  END CONTENT AREA  -->
     </div>
     <!--  END CONTENT AREA  -->
     <div class="modal fade" id="editExampleModal" tabindex="-1" aria-labelledby="editExampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-dialog modal-dialog-centered mw-700px">
             <div class="modal-content bg-white">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Edit User</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="btn-close"></button>
                 </div>
+                <div class="modal-body scroll-y mx-5 mx-xl-5 my-7">
                 <form  method="post" id="editUploadForm" enctype="multipart/form-data">
-                    <div class="modal-body">
-                        <div class="row p-1">
-                            <div class="col-sm-6 m-b30">
+                        <div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll"
+                             data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}"
+                             data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header"
+                             data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px"
+                             style="max-height: 570px;">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
+                                <label class="form-label">Business Structure</label>
+                                <input type="text" class="form-control form-control-solid" id="account_type" name="account_type" placeholder="Business Structure">
+                            </div>
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">First name</label>
-                                <input type="text" class="form-control" id="fname" name="fname" placeholder="First Name">
+                                <input type="text" class="form-control form-control-solid" id="fname" name="fname" placeholder="First Name">
                                 <input type="hidden" name="csrf" value="{{ csrf}}">
                                 <input type="hidden" name="id" id="id">
                             </div>
-                            <div class="col-sm-6 m-b30">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Last name</label>
-                                <input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name">
+                                <input type="text" class="form-control form-control-solid" id="lname" name="lname" placeholder="Last Name">
                             </div>
-                            <div class="col-sm-6 m-b30">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Email adress</label>
-                                <input type="text" class="form-control" id="email" name="email" placeholder="Email" readonly>
+                                <input type="text" class="form-control form-control-solid" id="email" name="email" placeholder="Email" readonly>
                             </div>
-                            <div class="col-sm-6 m-b30">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Phone No</label>
-                                <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone No">
+                                <input type="tel" class="form-control form-control-solid" id="phone" name="phone" placeholder="Phone No">
                             </div>
-                            <div class="col-sm-6 m-b30">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password " name="password" placeholder="Password">
+                                <input type="password" class="form-control form-control-solid" id="password " name="password" placeholder="Password">
                             </div>
-                            <div class="col-sm-6 m-b30">
+                            <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Confirm Password</label>
-                                <input type="password" class="form-control" id="cpassword" name="cpassword" placeholder="Confirm Password">
+                                <input type="password" class="form-control form-control-solid" id="cpassword" name="cpassword" placeholder="Confirm Password">
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer justify-content-center">
                         <button type="button"  class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button type="button" name="add_new" id="btn-profile" class="btn btn-primary" onclick="update_tool()">Update</button>
                     </div>
@@ -110,6 +128,8 @@
             </div>
         </div>
     </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
@@ -132,6 +152,9 @@
                     {mData: 'statusView'},
                     {mData: 'action'},
                 ]
+            });
+            $('#search').on('keyup', function() {
+                $('#table').DataTable().search(this.value).draw();
             });
         });
         function userStatus(userID, status) {
@@ -212,6 +235,7 @@
                 success: function (dataResult) {
                     var dataResult = JSON.parse(dataResult);
                     console.log(dataResult);
+                    $('#account_type').val(dataResult[0].account_type);
                     $('#fname').val(dataResult[0].fname);
                     $('#lname').val(dataResult[0].lname);
                     $('#email').val(dataResult[0].email);
