--- a/views/auth/forget_password.twig
+++ b/views/auth/forget_password.twig
@@ -114,7 +114,7 @@
                             <label class="form-label fs-6 fw-bolder text-dark">Email</label>
                             <!--end::Label-->
                             <!--begin::Input-->
-                            <input class="form-control form-control-lg form-control-solid" type="email" id="email" name="email" autocomplete="off" />
+                            <input class="form-control form-control-lg form-control-solid" type="email" id="email" name="email"  />
                             <!--end::Input-->
                         </div>
 
