--- a/views/auth/login.twig
+++ b/views/auth/login.twig
@@ -116,7 +116,7 @@
                             <label class="form-label fs-6 fw-bolder text-dark">Email</label>
                             <!--end::Label-->
                             <!--begin::Input-->
-                            <input class="form-control form-control-lg form-control-solid" type="text" id="email" name="email" autocomplete="off" />
+                            <input class="form-control form-control-lg form-control-solid" type="text" id="email" name="email"  />
                             <!--end::Input-->
                         </div>
                         <!--end::Input group-->
@@ -133,7 +133,7 @@
                             </div>
                             <!--end::Wrapper-->
                             <!--begin::Input-->
-                            <input class="form-control form-control-lg form-control-solid" type="password" name="password" autocomplete="off" id="password" />
+                            <input class="form-control form-control-lg form-control-solid" type="password" name="password"  id="password" />
                             <!--end::Input-->
                         </div>
                         <!--end::Input group-->
