--- a/views/user/invoice/add.twig
+++ b/views/user/invoice/add.twig
@@ -120,7 +120,13 @@
                                                             <div class="form-group row">
                                                                 <label for="firm_address" class="col-sm-3 col-form-label col-form-label-sm">Address</label>
                                                                 <div class="col-sm-9">
-                                                                    <input type="text" class="form-control form-control-solid " id="firm_address" name="firm_address" placeholder="XYZ Street"  value="{{ firmBillingInfo[0].billing_address }}">
+                                                                    {% if CompanyInfo.address != "" %}
+                                                                        <input type="text" class="form-control form-control-solid " id="firm_address" name="firm_address" placeholder="XYZ Street"  value="{{ CompanyInfo.address }}">
+                                                                    {% else %}
+                                                                        <p style="color: red">*Please Add Firm Email in Your Profile <a href="/user/profile">Click Here To Add</a> </p>
+                                                                        <input type="text" class="form-control form-control-solid " id="firm_address" name="firm_address" placeholder="XYZ Street"  value="{{ CompanyInfo.address }}">
+                                                                    {% endif %}
+
                                                                 </div>
                                                             </div>
                                                             <div class="form-group row">
