add client and other

--- a/views/user/appointment/index.twig
+++ b/views/user/appointment/index.twig
@@ -585,7 +585,7 @@
             var csrf_token = $("input[name=csrf]").val();
             var purpose = $("input[name=edit_purpose]:checked").val();
 
-            if (title != "" && dateTime != "" && client_id != ""&& purpose != "") {
+            if (title != "" && dateTime != "" && purpose != "") {
 
                 document.getElementById("btn").innerHTML = "Loading";
                 $("#btn").attr("disabled");
