--- a/views/user/includes/navbar.twig
+++ b/views/user/includes/navbar.twig
@@ -36,11 +36,12 @@
                 <!--begin::Menu wrapper-->
                 <div class="header-menu align-items-stretch" data-kt-drawer="true" data-kt-drawer-name="header-menu" data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" data-kt-drawer-width="{default:'200px', '300px': '250px'}" data-kt-drawer-direction="end" data-kt-drawer-toggle="#kt_header_menu_mobile_toggle" data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_body', lg: '#kt_header_nav'}">
                     <!--begin::Menu-->
-                    {% if loginType == "firm" or loginType == "member" %}
-                    <div class="menu menu-lg-rounded menu-column menu-lg-row menu-state-bg menu-title-gray-700 menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-400 fw-bold my-5 my-lg-0 align-items-stretch" id="#kt_header_menu"  data-kt-menu="true">
-                        <div class="menu-item">
-                            <a href="#" class="menu-link py-3" data-bs-toggle="modal" data-bs-target="#inputFormModal">
-										<span class="menu-icon">
+                    <div class="menu menu-lg-rounded menu-column menu-lg-row menu-state-bg menu-title-gray-700 menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-400 fw-bold my-5 my-lg-0 align-items-stretch" id="#kt_header_menu" data-kt-menu="true">
+
+                        {% if loginType == "firm" or loginType == "member" %}
+                        <div data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-lg-1">
+												<span class="menu-link py-3">
+                                                       	<span class="menu-icon">
 											<span class="svg-icon svg-icon-2">
 <span class="svg-icon svg-icon-muted svg-icon-1x"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 <rect opacity="0.5" x="11" y="18" width="12" height="2" rx="1" transform="rotate(-90 11 18)" fill="currentColor"/>
@@ -49,12 +50,31 @@
 
 											</span>
 										</span>
-                                <span class="menu-title">Invite Clients</span>
-                            </a>
+													<span class="menu-title">Clients</span>
+													<span class="menu-arrow d-lg-none"></span>
+												</span>
+                            <div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4">
+                                <div class="menu-item">
+                                    <a class="menu-link py-3" href="#" data-bs-toggle="modal" data-bs-target="#inputFormModal" data-bs-placement="right">
+                                                             <span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+                                        <span class="menu-title">Invite Client</span>
+                                    </a>
+                                </div>
+                                <div class="menu-item">
+                                    <a class="menu-link py-3" href="#" data-bs-toggle="modal" data-bs-target="#addClientModal" data-bs-placement="right">
+  <span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+                                        <span class="menu-title">Add Client</span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="menu-item">
-                            <a href="#" class="menu-link" data-bs-toggle="modal" data-bs-target="#inputFormModalAssociates">
-<span class="menu-icon">
+                        <div data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-lg-1">
+												<span class="menu-link py-3">
+                                                       	<span class="menu-icon">
 											<span class="svg-icon svg-icon-2">
 <span class="svg-icon svg-icon-muted svg-icon-1x"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 <rect opacity="0.5" x="11" y="18" width="12" height="2" rx="1" transform="rotate(-90 11 18)" fill="currentColor"/>
@@ -63,11 +83,31 @@
 
 											</span>
 										</span>
-                                <span class="menu-title">Invite Associates</span>
-                            </a>
+													<span class="menu-title">Associates</span>
+													<span class="menu-arrow d-lg-none"></span>
+												</span>
+                            <div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4">
+                                <div class="menu-item">
+                                    <a class="menu-link py-3" href="#" data-bs-toggle="modal" data-bs-target="#inputFormModalAssociates" data-bs-placement="right">
+  <span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+                                        <span class="menu-title">Invite Associates</span>
+                                    </a>
+                                </div>
+                                <div class="menu-item">
+                                    <a class="menu-link py-3" href="#" data-bs-toggle="modal" data-bs-target="#addAssociatesModal" data-bs-placement="right">
+  <span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+                                        <span class="menu-title">Add Associates</span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
+                        {% endif %}
                     </div>
-                    {% endif %}
+
                     <!--end::Menu-->
                 </div>
                 <!--end::Menu wrapper-->
