--- a/views/admin/includes/styles.twig
+++ b/views/admin/includes/styles.twig
@@ -46,4 +46,52 @@
         transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
         font-size: 25px;
     }
+    #google_translate_element img {
+        display: none !important;
+    }
+    .goog-te-gadget span a {
+        color: transparent !important;
+    }
+    .goog-te-gadget {
+        color: transparent !important;
+    }
+    .goog-te-gadget .goog-te-combo {
+        background-color: transparent;
+        color: #5e6d88;
+        border: transparent;
+    }
+    .VIpgJd-ZVi9od-ORHb-OEVmcd{
+        display: none;
+    }
+    iframe.skiptranslate {
+        visibility: hidden !important;
+    }
+    body {
+        top: 0px !important;
+    }
+    /* Hide the Google Translate loader */
+    .goog-te-spinner-pos {
+        display: none !important;
+    }
+
+    /* Hide the Google Translate iframe */
+    .goog-te-gadget-icon {
+        display: none !important;
+    }
+
+    #google_translate_element{width:300px;float:right;text-align:right;display:block}
+    .goog-te-banner-frame.skiptranslate { display: none !important;}
+    body { top: 0px !important; }
+    #goog-gt-tt{display: none !important; top: 0px !important; }
+    .goog-tooltip .skiptranslate{display: none !important; top: 0px !important; }
+    .activity-root { display: hide !important;}
+    .status-message { display: hide !important;}
+    .started-activity-container { display: hide !important;}
+    .VIpgJd-yAWNEb-VIpgJd-fmcmS-sn54Q {
+        background-color: transparent !important;
+        box-shadow: none !important; /* Remove any existing box shadow */
+    }
+    .VIpgJd-ZVi9od-aZ2wEe-wOHMyf {
+        display: none !important;
+    }
 </style>
