--- a/views/admin/includes/footer.twig
+++ b/views/admin/includes/footer.twig
@@ -9,11 +9,31 @@
         <!--begin::Menu-->
         <ul class="menu menu-gray-600 menu-hover-primary fw-bold order-1">
             <li class="menu-item">
-                <a href="/about" target="_blank" class="menu-link px-2">About</a>
+                <div id="google_translate_element" style="display: none"></div>
+                <!-- Custom Language Selector -->
+                <select id="languageSelect" class=" form-select form-select-solid" >
+                    <option value="en" class="">English</option>
+                    <option value="es" class="">Spanish</option>
+                    <option value="ja" class="">Japanese</option>
+                    <option value="zh-CN" class="">Chinese</option>
+                    <option value="pt" class="">Portuguese</option>
+                    <option value="ar" class="">Arabic</option>
+                    <option value="nl" class="">Dutch</option>
+                    <option value="de" class="">German</option>
+                    <option value="fr" class="">French</option>
+                    <option value="it" class="">Italian</option>
+                    <option value="pl" class="">Polish</option>
+                    <option value="ru" class="">Russian</option>
+                    <option value="sw" class="">Swahili</option>
+                    <option value="ur" class="">Urdu</option>
+                    <option value="hi" class="">Hindi</option>
+                    <option value="bn" class="">Bengali</option>
+                    <option value="fa" class="">Persian</option>
+                    <option value="ta" class="">Tamil</option>
+                    <option value="ml" class="">Malayalam</option>
+                </select>
             </li>
-            <li class="menu-item">
-                <a href="/support" target="_blank" class="menu-link px-2">Support</a>
-            </li>
+
 
         </ul>
         <!--end::Menu-->
@@ -55,7 +75,43 @@
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/create-app.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/users-search.js"></script>
 
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        document.documentElement.lang = 'en'; // Ensure the language is set before Google Translate initializes
+        new google.translate.TranslateElement({
+            pageLanguage: 'en',
+            includedLanguages: 'en,es,fr,de,it,ar,ja,zh-CN,pt,nl,pl,ru,sw,ur,hi,bn,fa,ta,ml', // Include all the languages
+            autoDisplay: false
+        }, 'google_translate_element');
+    }
 
+    function triggerGoogleTranslate(languageCode) {
+        var googleFrame = document.querySelector('.goog-te-combo');
+        if (googleFrame) {
+            googleFrame.value = languageCode;
+            googleFrame.dispatchEvent(new Event('change'));
+        }
+    }
+
+    document.getElementById('languageSelect').addEventListener('change', function () {
+        var languageCode = this.value;
+        console.log(languageCode);
+        triggerGoogleTranslate(languageCode);
+    });
+    window.onscroll = function() {
+        // Assuming "languageSelect" is the class name of the header
+        var header = document.getElementsByClassName("languageSelect")[0]; // Access the first element with this class
+        var select = document.getElementById("languageSelect");
+
+        if (window.pageYOffset > 50) {
+            header.classList.add("scrolled");
+        } else {
+            header.classList.remove("scrolled");
+        }
+    };
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 </html>
